--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "@mui/material": "^6.2.1",
     "next": "^15.1.2",
     "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.4.0",
+    "react-scrollable-list": "^1.3.1",
+    "shadcn": "^2.4.0-canary.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
