--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
-    "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-radio-group": "^1.2.4",
     "@radix-ui/react-scroll-area": "^1.2.4",
     "@radix-ui/react-select": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tooltip": "^1.2.3",
     "brackets-viewer": "^1.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^5.1.0",
+    "framer-motion": "^12.9.2",
     "iron-session": "^8.0.4",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.487.0",
@@ -34,6 +38,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.5.3",
     "react-scrollable-list": "^1.3.1",
     "shadcn": "^2.4.0-canary.9",
     "tailwind-merge": "^3.2.0",
